@@ -1,18 +1,28 @@
-# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
+# Run CI for R using https://eddelbuettel.github.io/r-ci/
 
 language: c
 sudo: required
-dist: trusty
+dist: focal
+
+jobs:
+  include:
+    - name: linux
+      os: linux
+    #- name: macOS
+    #  os: osx
+
+env:
+  global:
+    - USE_BSPM="true"
+    - _R_CHECK_FORCE_SUGGESTS_="false"
 
 before_install:
-  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-  # optionally add our launchpad repo, but not needed here
-  # - sudo add-apt-repository -y ppa:edd/r-3.5
+  - curl -OLs https://eddelbuettel.github.io/r-ci/run.sh && chmod 0755 run.sh
   - ./run.sh bootstrap
 
 install:
-  - ./run.sh install_aptget r-cran-rcpp 
-  
+  - ./run.sh install_deps
+
 script:
   - ./run.sh run_tests
 
@@ -23,5 +33,3 @@ notifications:
   email:
     on_success: change
     on_failure: change
-        
-    
